--- a/app.vcxproj
+++ b/app.vcxproj
@@ -170,10 +170,14 @@
     <ClCompile Include="app.cpp" />
     <ClCompile Include="cmd_Handler.cpp" />
     <ClCompile Include="cmd_Help.cpp" />
+    <ClCompile Include="cmd_Link.cpp" />
     <ClCompile Include="cmd_List.cpp" />
+    <ClCompile Include="cmd_MkDir.cpp" />
     <ClCompile Include="cmd_Parse.cpp" />
     <ClCompile Include="cmd_Quit.cpp" />
+    <ClCompile Include="cmd_Remove.cpp" />
     <ClCompile Include="cmd_Size.cpp" />
+    <ClCompile Include="cmd_Touch.cpp" />
     <ClCompile Include="tree_Disk.cpp" />
     <ClCompile Include="tree_File.cpp" />
     <ClCompile Include="tree_Folder.cpp" />
@@ -183,6 +187,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
+    <None Include="ClassDiagram.cd" />
     <None Include="disk.json" />
     <None Include="README.md" />
   </ItemGroup>
